# bluebot

./: .gitlab-ci.yml  Cargo.toml  README.md  TODO  strings.ron
Docker/: Dockerfile  docker-compose.yml
scripts/: start-bluebot-unix.sh
src/: events.rs  main.rs
src/commands/: general.rs  groups.rs  mod.rs
src/core/: mod.rs  support_commands.rs
src/core/config/: bot_config.rs  mod.rs  strings.rs
